# recalld

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  install.sh  recalld.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
benchmarks/claude-sonnet-4-6-top15/: bench_results.json
benchmarks/claude-sonnet-4-6-top20/: bench_results.json
benchmarks/gemini-2.5-flash-top15/: bench_results.json
benchmarks/gemini-2.5-flash-top15-stress-test/: bench_results.json
benchmarks/gemini-2.5-flash-top20/: bench_results.json
benchmarks/gemini-2.5-flash-top20-stress-test/: bench_results.json
docs/: architecture.md  benchmark.md  guide.md  mcp.md
src/: error.rs  lib.rs  main.rs  system.rs
src/api/: adapters.rs  errors.rs  handlers.rs  middleware.rs  mod.rs  models.rs  routes.rs  state.rs
src/backup/: archive.rs  lock.rs  manifest.rs  mod.rs  restore.rs
src/bench/: claude.rs  locomo.rs  mod.rs
src/bench/data/: locomo_conv30.json  locomo_conv41.json  locomo_first.json
src/cache/: manager.rs  mod.rs  pressure.rs  warming.rs  warming_adapters.rs  weight.rs
src/cli/: client.rs  commands.rs  config.rs  import.rs  mod.rs  output.rs
src/config/: loader.rs  mod.rs  types.rs
src/daemon/: bridge_adapters.rs  client.rs  lifecycle.rs  mod.rs  protocol.rs  server.rs
src/decay/: config.rs  fsrs.rs  mod.rs  storage_adapter.rs  sweep.rs
src/embedding/: bedrock.rs  cache.rs  mod.rs  ollama.rs  openai.rs  passthrough.rs  prefix.rs  provider.rs
src/graph/: activation.rs  autolink.rs  mod.rs  rebuild.rs  structure.rs
src/health/: mod.rs  report.rs
src/mcp/: bridge.rs  bridge_adapters.rs  http_transport.rs  mod.rs  protocol.rs  resources.rs  server.rs  tools.rs  transport.rs
src/model/: constants.rs  decay.rs  edge.rs  error.rs  id.rs  memory.rs  mod.rs  namespace.rs  record.rs  tag.rs
src/rif/: activation.rs  config.rs  engine.rs  metrics.rs  mod.rs  plasticity.rs
src/search/: adapters.rs  entity_index.rs  entity_normalize.rs  error.rs  fts.rs  index.rs  mod.rs  pipeline.rs  query.rs  response.rs  simd.rs
src/serialization/: binary.rs  json.rs  mod.rs
src/storage/: edges.rs  engine.rs  error.rs  fsync.rs  indexes.rs  metadata.rs  mod.rs  text.rs  vectors.rs
src/time/: mod.rs
